--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/sjm-practice/calculator-test/issues"
   },
-  "homepage": "https://github.com/sjm-practice/calculator-test#readme"
+  "homepage": "https://github.com/sjm-practice/calculator-test#readme",
+  "devDependencies": {
+    "chai": "^2.3.0",
+    "grunt": "^0.4.5",
+    "grunt-blanket-mocha": "^0.5.0",
+    "load-grunt-tasks": "^3.1.0",
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.7.0"
+  }
 }
