--- a/package.json
+++ b/package.json
@@ -27,7 +27,16 @@
     "chai": "^2.3.0",
     "grunt": "^0.4.5",
     "grunt-blanket-mocha": "^0.5.0",
+    "grunt-karma": "^0.10.1",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.11",
+    "karma-coverage": "^0.3.1",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-html2js-preprocessor": "^0.1.0",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^3.1.0",
+    "mocha": "^2.2.4",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.7.0"
   }
